[package]
name = "rustyfarian-esp-idf-espnow"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP-NOW driver for ESP-IDF projects"
keywords = ["espnow", "esp-idf", "rustyfarian", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[build-dependencies]
embuild.workspace = true

[dependencies]
espnow-pure.workspace = true
wifi-pure.workspace = true
anyhow.workspace = true
esp-idf-svc.workspace = true
esp-idf-hal.workspace = true
log.workspace = true

[dev-dependencies]
rustyfarian-esp-idf-wifi = { path = "../rustyfarian-esp-idf-wifi" }

[[example]]
name = "idf_c3_espnow_coordinator"

[[example]]
name = "idf_c3_espnow_scout"
