[package]
name = "rustyfarian-esp-idf-lora"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LoRa radio driver and LoRaWAN Class A protocol for embedded projects"
keywords = ["lora", "lorawan", "sx1262", "embedded", "esp32"]
categories = ["embedded"]

[features]
default = ["esp-idf"]
esp-idf = ["dep:esp-idf-hal", "dep:sx126x"]
# Enables src/mock.rs; no hardware deps.
# Use in dev-dependencies of downstream crates:
#   rustyfarian-esp-idf-lora = { ..., features = ["mock"] }
mock = []

[dependencies]
log.workspace = true
nb.workspace = true
heapless.workspace = true
lorawan-device.workspace = true
sx126x = { workspace = true, optional = true }
esp-idf-hal = { workspace = true, optional = true }
