[package]
name = "rustyfarian-esp-idf-lora"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LoRa radio driver and LoRaWAN Class A protocol for embedded projects"
keywords = ["lora", "lorawan", "sx1262", "embedded", "esp32"]
categories = ["embedded"]

[dependencies]
lora-pure.workspace = true
log.workspace = true
nb.workspace = true
esp-idf-hal.workspace = true
sx126x.workspace = true
