[package]
name = "rustyfarian-esp-idf-mqtt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MQTT client manager for ESP-IDF projects"
keywords = ["mqtt", "esp-idf", "rustyfarian", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[dependencies]
anyhow.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
