[package]
name = "rustyfarian-esp-idf-mqtt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MQTT client manager for ESP-IDF projects"
keywords = ["mqtt", "esp-idf", "rustyfarian", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[build-dependencies]
embuild.workspace = true

[dependencies]
rustyfarian-network-pure = { workspace = true, features = ["std"] }
anyhow.workspace = true
esp-idf-svc.workspace = true
pennant.workspace = true
log.workspace = true
rgb.workspace = true

[dev-dependencies]
rustyfarian-esp-idf-wifi = { path = "../rustyfarian-esp-idf-wifi" }
ssd1306.workspace = true
embedded-graphics.workspace = true

[[example]]
name = "idf_c3_mqtt"

[[example]]
name = "idf_esp32_mqtt"

[[example]]
name = "idf_c3_mqtt_button_oled"

[[example]]
name = "idf_c3_mqtt_led_grid"
