[package]
name = "rustyfarian-esp-idf-ota"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP-IDF OTA driver — streaming download + SHA-256 verify + partition swap"
keywords = ["ota", "esp32", "esp-idf"]
categories = ["embedded"]

[build-dependencies]
embuild.workspace = true

[dependencies]
juggler = { workspace = true, features = ["ota"] }
esp-idf-svc.workspace = true
embedded-svc.workspace = true
log.workspace = true
