[package]
name = "rustyfarian-esp-idf-provisioning"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP-IDF SoftAP captive-portal provisioning driver"
keywords = ["provisioning", "esp-idf", "rustyfarian", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[[example]]
name = "idf_c3_provision"

[build-dependencies]
embuild.workspace = true

[dependencies]
provisioning-pure.workspace = true
wifi-pure.workspace = true
rustyfarian-esp-idf-wifi = { path = "../rustyfarian-esp-idf-wifi" }
anyhow.workspace = true
esp-idf-svc.workspace = true
embedded-svc.workspace = true
log.workspace = true
