[package]
name = "rustyfarian-esp-idf-provisioning"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP-IDF SoftAP captive-portal provisioning driver"
keywords = ["provisioning", "esp-idf", "rustyfarian", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[[example]]
name = "idf_c3_provision"

[[example]]
name = "idf_c3_provision_mqtt"

[build-dependencies]
embuild.workspace = true

[dependencies]
juggler = { workspace = true, features = ["provisioning"] }
rustyfarian-esp-idf-wifi = { path = "../rustyfarian-esp-idf-wifi" }
anyhow.workspace = true
esp-idf-svc.workspace = true
embedded-svc.workspace = true
log.workspace = true

[dev-dependencies]
# Used only by `idf_c3_provision_mqtt` to demonstrate constructing the
# downstream `MqttConfig` from a committed `WifiMqttDevice` config. Cross-crate
# path dev-dependencies are the established pattern in this workspace (see
# rustyfarian-esp-idf-espnow / -mqtt / -wifi).
rustyfarian-esp-idf-mqtt = { path = "../rustyfarian-esp-idf-mqtt" }
