[package]
name = "rustyfarian-esp-idf-wifi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wi-Fi connection manager for ESP-IDF projects"
keywords = ["wifi", "esp-idf", "rustyfarian", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[[example]]
name = "idf_c3_connect"

[[example]]
name = "idf_c3_connect_nonblocking"

[[example]]
name = "idf_c6_connect_nonblocking_rgb"

[build-dependencies]
embuild.workspace = true

[dependencies]
wifi-pure.workspace = true
rustyfarian-network-pure.workspace = true
anyhow.workspace = true
esp-idf-svc.workspace = true
led-effects.workspace = true
log.workspace = true
rgb.workspace = true

[dev-dependencies]
rustyfarian-esp-idf-ws2812.workspace = true
