[package]
name = "rustyfarian-network-pure"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-independent primitives for rustyfarian-network crates"
keywords = ["wifi", "mqtt", "esp-idf", "rustyfarian", "embedded"]
categories = ["embedded"]
