[package]
name = "wifi-pure"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-independent Wi-Fi types, traits, and validation"
keywords = ["wifi", "embedded", "no-std"]
categories = ["embedded", "no-std"]

[features]
mock = []
